// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should be rendered correctly 1`] = `
<div
  className="container uui-input-box root size-36 mode-form uui-theme-loveship"
>
  <textarea
    className="-clickable noAutoSize uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="test"
  />
</div>
`;

exports[`TextArea should be rendered correctly with extra props 1`] = `
<div
  className="container uui-input-box root size-60 mode-form uui-theme-loveship"
>
  <textarea
    className="-clickable noAutoSize uui-input"
    maxLength={200}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Type here"
    rows={4}
    value="test"
  />
  <div
    className="uui-textarea-counter"
  >
    4/200
  </div>
</div>
`;
